crates/language-v2/tests/src/fail/p2_specifiers/evm_target_unordered_pair/test.stderr
error: EVM target 'Cancun' must precede corresponding EVM target 'Homestead'.
  --> src/fail/p2_specifiers/evm_target_unordered_pair/test.rs:25:91
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = Range(from = Cancun, till = Homestead))]
   |                                                                                           ^^^^^^
